# ros-robot

./: .gitignore  .gitmodules  abot_left_wheel.STL  abot_lidar.STL  abot_right_wheel.STL  display_model.launch  oooooooooooo  readme.md  test_urdf.urdf
abot_base/src/: abot_base.cpp  abot_hardware_interface.h
abot_description/launch/: bringup.launch
abot_description/meshes/: abot_base.STL  abot_base.m3d  abot_left_wheel.STL  abot_left_wheel.m3d  abot_lidar.STL  abot_lidar_1.m3d  abot_right_wheel.STL  abot_right_wheel.m3d  ~$ot_base.m3~  ~$ot_lidar.m3~  ~$ot_lidar_1.m3~  ~$ot_right_wheel.m3~
abot_description/urdf/: abot.xacro  abot_caster_wheel.xacro  abot_left_wheel.xacro  abot_right_wheel.xacro  abot_sensors.xacro
abot_driver/src/: dc_motors.cpp  encoder_wiring_pi.hpp  encoders.cpp
abot_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
abot_navigation/launch/: abot_navigation.launch  move_base.launch
abot_slam/maps/: map.pgm
abot_teleop/src/: abot_teleop.cpp
base/src/: base.cpp  hardware_interface.h
bringup/: CMakeLists.txt
bringup/launch/: bringup.launch
bringup/urdf/: description.urdf
control/launch/: control.launch
description/: CMakeLists.txt  package.xml
description/launch/: bringup.launch  display_movement.launch  display_slam.launch.save
description/rviz/: display_movement.rviz
description/urdf/: description.urdf
driver/: CMakeLists.txt
driver/launch/: drivers.launch  lidar.launch  pid.launch
driver/src/: dc_motor_wiring_pi.hpp  dc_motors.cpp
meshes/: robot_wheel_l.stl
navigation/config/: costmap_common.yaml
navigation/launch/: navigation.launch
pc/devel/: .catkin  local_setup.sh
robot_description/: package.xml
robot_description/urdf/: urdf_v1.urdf
ros1/src/navigation/: package.xml
ros1/src/slam/: package.xml
rpi/src/bringup/: package.xml
rpi/src/bringup/launch/: bringup.launch
rviz/: abot_model.rviz
slam/: CMakeLists.txt
(+55 files in other folders)
