<?xml version="1.0"?>
	<package format="3">
	<name>navigation</name>
	<version>0.0.0</version>
	<description>The navigation package</description>

	<maintainer email="sosal@sosal.ru">wodo</maintainer>
	<license>no licenst</license>

    <buildtool_depend>catkin</buildtool_depend>

	<exec_depend>amcl</exec_depend>
	<exec_depend>map_server</exec_depend>
	<exec_depend>move_base</exec_depend>

	<export>
	</export>
</package>
