<?xml version="1.0"?>
	<package format="2">
	<name>slam</name>
	<version>0.0.0</version>
	<description>The slam package</description>

	<maintainer email="sosal@sosal.ru">wodo</maintainer>
	<license>no license</license>

	<buildtool_depend>catkin</buildtool_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>gmapping</build_depend>

    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>gmapping</build_export_depend>

    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>gmapping</exec_depend>

	<export>
	</export>
</package>
